<resources>
    <string name="app_name">AutoTelemetry</string>
    <string name="add_car">Add car</string>
    <string name="reset_account">Account reset</string>
    <string name="car_count">Car count</string>
    <string name="total_distance">Total distance</string>
    <string name="total_time">Total time</string>
    <string name="add_bluetooth">Add bluetooth sensor</string>
    <string name="change_theme">Change theme</string>
    <string name="distance">Distance[m]:</string>
    <string name="time">Time:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="settings">Settings</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="overview">Overview</string>
    <string name="new_session">New sesion</string>
    <string name="account">Account</string>
    <string name="language">Language</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="sys_default">System default</string>
    <string name="ble_sensor_add_error">Adding new sensors not suported</string>
    <string name="polish">Polish</string>
    <string name="english">english</string>
    <string name="title_activity_session_fragment">SessionFragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>